--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     }
         .main{
             width:100%;
-            background:linear-gradient(to top,rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%),url(1.jpg);
+           
             background-position:center;
             background-size:cover;
             height:109vh;
+            background color: rgb(0, 25, 139);
         }
         .navbar{
             width:1200px;
